# vsc-forensic

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  mkdocs.yml  renovate.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
docs/: RESEARCH.md  index.md  privacy.md  terms.md
forensic/: Cargo.toml
forensic/src/: lib.rs
